--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,33 @@ h2 {
     margin-bottom: 10px;
     text-align: center;
 }
+
+.goal-bar {
+    width: 800px;
+    height: 100px;
+    margin-bottom: 10px;         
+    margin-left: auto;  
+    margin-right: auto;
+}
+
+.goal-bar progress {
+    width: 100%;
+    height: 50px;
+}
+
+.icon-button {
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    color: inherit;
+    cursor: pointer;
+    display: inline;
+}
+
+li {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
