--- a/styles.css
+++ b/styles.css
@@ -98,3 +98,38 @@ li {
     justify-content: space-between;
 }
 
+.dropdown-button {
+    background: none;
+    color: #333;
+    font-size: medium;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    margin: 0px auto 0;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: rgb(228, 234, 248);
+    width: 100%;
+    height: 150px;
+    overflow-y: auto;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 8px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown:hover .dropdown-content {display: block;}
