--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,9 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
     background: #bad2fc;
-    padding: 2px 12px;
+    padding: 8px 20px;
 }
 
 .grid-container {
@@ -58,6 +59,9 @@ h1 {
     font-size: 28px;
     margin-bottom: 20px;
     text-align: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 h2 {
