--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
 }
 
 section {
-    background: rgb(228, 234, 248);
+    background: rgb(255, 255, 255);
     padding: 0px 20%;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);  
@@ -45,7 +45,7 @@ section {
 
 button {
     display: block;
-    background-color: #3d3bb4;
+    background-color: #8f7ace;
     color: white;
     padding: 8px 12px;
     border: none;
@@ -102,6 +102,9 @@ li {
     justify-content: space-between;
 }
 
+button:active {
+    opacity: 0.8;
+}
 .dropdown-button {
     background: none;
     color: #333;
@@ -196,3 +199,44 @@ a {
     text-align: center;
     padding-top: 10px;
 }
+
+/* X MERKKI TULO LISTASSA*/
+.remove-btn {
+    background: none;
+    border: none;
+    color: red;
+    font-size: 20px;
+    cursor: pointer;
+    margin-left: 15px;
+    padding: 0;
+    display: flex;
+    align-items: center;
+  }
+
+  .modal {
+    opacity: 0;
+    z-index: -1;
+    position: fixed; top:0; left:0; right:0; bottom:0;
+    display:flex; align-items:center; justify-content:center;
+    background:rgba(0,0,0,0.5);
+    transition: all .3s ease-in-out;
+  }
+  .modal.open {
+    opacity: 1;
+    z-index: 999;
+  }
+  .modal-inner {
+    background-color: #b5c6e4;
+    border-radius: 10px;
+    padding: 20px;
+    width: 300px;
+    text-align: center;
+  }
+  .modal-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 15px;
+  }
+  
+
