--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ section {
 
 button {
     display: block;
-    background-color: #8f7ace;
+    background-color: #5045ee;
     color: white;
     padding: 8px 12px;
     border: none;
@@ -141,6 +141,77 @@ button:active {
 
 .dropdown:hover .dropdown-content {display: block;}
 
+.profile-picture {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+.profile-picture img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+    display: block;
+}
+
+.hamburger-menu {
+    position: relative;
+  }
+
+  .hamburger-content {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 300px;
+    background-color: rgb(228, 234, 248);
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    z-index: 1000;
+  }
+
+  .hamburger-content a {
+    color: #333;
+    padding: 12px 8px;
+    text-decoration: none;
+    display: block;
+}
+
+.menu-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: #bad2fc;
+  }
+
+  .back-arrow {
+    font-size: 24px;
+    cursor: pointer;
+    margin: 0 0 0 0;
+    background-color: #bad2fc;
+    color: #333;
+  }
+
+.menu-header h2 {
+    margin: 10px 10px;
+    font-size: 20px;
+}
+
+.log-out button {
+  text-decoration: none;
+  color: #ff0000;
+  font-size: large;
+  background-color: rgb(228, 234, 248);
+}
+.log-out {
+    position: absolute;
+    text-align: center;
+    bottom: 20px;
+    left: 0;
+    width: 100%;
+}
 
 .top-bar-login {
     display: flex;
@@ -227,7 +298,7 @@ a {
   }
   
   .modal-inner {
-    background-color: #b5c6e4;
+    background-color:  rgb(228, 234, 248);;
     border-radius: 10px;
     padding: 20px;
     width: 300px;
